--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,13 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.15)
 project(da1-dd-sv-dthu VERSION 1.0)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
-include_directories(include)
-
-file(GLOB_RECURSE SOURCES "src/*.cpp")
+set(SOURCES src/main.cpp
+            src/stats.cpp)
 
 add_executable(diemdanh ${SOURCES})
+
+target_include_directories(diemdanh PRIVATE ${PROJECT_SOURCE_DIR}/include)
